--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 <head>
     <title>React Time Picker</title>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
     <style>
 
@@ -19,8 +20,8 @@
     <div id="content">
     </div>
 
-    <script src="http://localhost:9090/webpack-dev-server.js"></script>
-    <script type="text/javascript" src="http://localhost:9090/assets/bundle.js"></script>
+    <script src="http://192.168.1.3:9090/webpack-dev-server.js"></script>
+    <script type="text/javascript" src="http://192.168.1.3:9090/assets/bundle.js"></script>
 
     <!-- <script type="text/javascript" src="./bundle.js"></script> -->
 </body>
